--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ crate-type = ["lib"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full"] }
