--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "archx"
-version = "2.0.0"
+version = "2.1.0"
 authors = ["AkramStation"]
 edition = "2021"
 license = "MIT"
@@ -19,6 +19,7 @@ crate-type = ["lib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sysinfo = "0.38.0"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
